--- a/assets/content.css
+++ b/assets/content.css
@@ -1,4 +1,5 @@
 /* CSS Document */
+/*container of main content area*/
 .content-container{
 	width: 10%;
 	min-width: 1024px;
@@ -9,7 +10,8 @@
 }
 
 
-.content #contact-form{
+/*left and right inner container*/
+.content #contact-form, .content #members-form{
 	width: 50%;
 	display: flex;
 	flex-direction: column;
@@ -17,57 +19,66 @@
 }
 
 
-.content #contact-form h1 ,.content #contact-form-decoration #altinfo h1{
+/*----- register page -----*/
+/*left register in heading*/
+.content #members-form h1 {
+    font-size: 25px;
+	font-weight: 600;
+	color: #061b36;
+	text-align:center; 
+	width: 90%;
+}
+
+
+.content .radio_col{
+	padding-bottom: 12px;
+	font-size: 17px;
+}
+
+
+.content #members-form-decoration{
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	padding-left: 30px; 
+	text-align: center;
+}
+
+.content a:link, .content a:visited, .content a:hover, .content a:active{
+	color: #5A49E3!important; 
+	font-weight: 600!important;
+}
+
+.content input[type=memberFeeDisplayer]{
+    font-size: 30px;
+	width: 90%;
+	height: 35px;
+	border:none;
+	font-family: "Noto Sans", sans-serif, Arial;
+	font-weight: 600;
+	color: #5949E3
+}
+
+/*range slider displayer style*/
+.content input[type=sliderDisplayer]{
+	padding-top: 10px;
+	height: 35px;
+	font-size: 15px;
+	font-family: "Noto Sans", sans-serif, Arial;
+	width: 30px; 
+	border: none;  
+	font-weight: 600; 
+	text-align: right
+}
+
+
+/*----- contact page -----*/
+/*left contact us haeding*/
+.content #contact-form h1, .content #contact-form-decoration #altinfo h1{
     font-size: 32px;
 	font-weight: 600;
 	color: #061b36;
 }
-
-.content #contact-form .contact-label{
-	font-size: 15px;
-	font-weight: 600;
-	color: #061b36;
-}
-
-
-.content #contact-form a{
-	color: #FF0004;
-}
-
-.content #contact-form input[type=text], .content #contact-form input[type=email], .content #contact-form input[type=tel]{
-	width: 90%;
-	height: 35px;
-	border:2px solid #B6B5B5;
-	border-radius: 1px;
-	font-size: 15px;
-	font-family: "Noto Sans", sans-serif, Arial;
-}
-
-.content #contact-form textarea{
-	width: 90%;
-	height: 35px;
-	border:2px solid #B6B5B5;
-	border-radius: 1px;
-	font-size: 15px;
-	font-family: "Noto Sans", sans-serif, Arial;
-}
-
-
-
-.content #contact-form input[type=submit]{
-	background-color: #5949E3;
-  	color: white;
- 	padding: 15px 20px;
-  	cursor: pointer;
-	border-radius: 0px;
-	border: none;
-
-	font-size: 17px;
-	font-weight: 300;
-
-
-}
-
 
 .content #contact-form-decoration{
 	width: 50%;
@@ -83,10 +94,89 @@
 
 }
 
-
-
 .content #contact-form-decoration #altinfo{
 	display: flex;
 	flex-direction: column;
 	padding-left: 30px;
 }
+
+
+/*----- forms -----*/
+/*form require star label*/
+.content #contact-form a,  .content #members-form a{
+	color: #FF0004;
+}
+
+
+/*form label style*/
+.content .contact-label{
+	font-size: 15px;
+	font-weight: 300;
+	color: #061b36;
+}
+
+
+.content .inline-description{
+	margin-top: 20px;
+	color: #656565;
+}
+
+/*input area style*/
+.content input[type=text], .content input[type=email], .content input[type=tel], .content input[type=password]{
+	width: 90%;
+	height: 35px;
+	border:1px solid #C5CEE0;
+	border-radius: 8px;
+	font-size: 15px;
+	font-family: "Noto Sans", sans-serif, Arial;
+}
+
+
+/*range slider style*/
+.content input[type="range"]{
+	-webkit-appearance: none; /* Disable original style in safari */
+	width: 81%;
+	font-family: "Noto Sans", sans-serif, Arial;
+	background: #5A49E3;
+	height: 4px;
+}
+
+.content input[type=radio]{
+	font-size: 15px;
+	font-family: "Noto Sans", sans-serif, Arial;
+	padding-bottom: 10px;
+	font-weight: 300;
+}
+
+/*long text area style*/
+.content textarea{
+	width: 90%;
+	height: 35px;
+	border:1px solid #C5CEE0;
+	border-radius: 8px;
+	font-size: 15px;
+	font-family: "Noto Sans", sans-serif, Arial;
+}
+
+/*submit btn style*/
+.content [type=submit]{
+	background-color: #5949E3;
+  	color: white;
+ 	padding: 15px 20px;
+  	cursor: pointer;
+	border-radius: 0px;
+	border: none;
+
+	font-size: 17px;
+	font-weight: 300;
+}
+
+
+
+/*submit btn style in login and register*/
+#members-form [type=submit]{
+	border-radius: 8px !important;
+	width: 90% !important;
+}
+
+
