--- a/assets/content.css
+++ b/assets/content.css
@@ -134,6 +134,8 @@
 	font-size:48px;
 	font-family: "Lato", sans-serif !important;
 	color: #061b36;
+	
+	text-align: center;
 }
 
 #meal-left-col h1 {
@@ -152,7 +154,7 @@
 	width: 0;
 }
 
-/* The container */
+/* Styling the unchecked status */
 #meal-left-col label {
 	background: #FCFEFF;
 	border: 1px solid #DEDEDE;
@@ -166,31 +168,41 @@
 	font-size:16px;
 	color: #000000;
 	cursor: pointer;
+	transition: all 1s;
 }
 
-/* On mouse-over, add a grey background color */
+/* Styling the checked status */
 #meal-left-col input[type="radio"]:checked + label{
 	background: #AC77F0;
 	box-shadow: 0px 4px 12px rgba(162, 89, 255, 0.74);
 	border-radius: 40px;
-	border: none;
+	border: 1px solid #AC77F0;
 	color: #F7F7F7;
 	cursor: pointer;
-
+	transition: all 1s;
 }
+
+/* Styling the hover status */
+#meal-left-col label:hover{
+	box-shadow: 1px 0px 13px 1px #D5D7DC;
+	border: 1px #ABABAB solid;
+	transition: all 1s;
+}
+
 
 #meal-left-col input[type="submit"]{
 	color: #7519EB;
 	font-size: 36px;
 	width: 100%;
-
-	font-weight: 600; 
 	background-color: #FFFFFF !important;
 	padding-left: 0px;
 	text-align: left;
 	background: url("images/arrow-right.svg");
 	background-repeat: no-repeat;
 	background-position: 295px 13px;
+	font-weight: 900;
+	font-family: "Lato", sans-serif !important;
+
 }
 
 
