--- a/assets/content.css
+++ b/assets/content.css
@@ -1,13 +1,26 @@
 /* CSS Document */
 /*container of main content area*/
 .content-container {
-  width: 80%;
+  width: 70%;
   min-width: 1024px;
   display: flex;
   padding: 20px 0px 20px 0px;
   margin-top: 40px;
   margin-bottom: 40px;
 }
+
+.service-page-container{
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+}
+
+
+.article-content-container{
+  padding: 50px;
+}
+
+
 /*left and right inner container*/
 .content #contact-form, .content #members-form {
   width: 50%;
@@ -56,7 +69,7 @@
   width: 30px;
   border: none;
   font-weight: 600;
-  text-align: right
+  text-align: right;
 }
 /*----- contact page -----*/
 /*left contact us haeding*/
@@ -175,6 +188,12 @@
 .result-col-item {
   display: flex;
   flex-wrap: wrap;
+}
+
+div#meal-right-col {
+  display: flex;
+  justify-content: center;
+  width: 40%;
 }
 /*-------- Overview bar --------*/
 /*Overview container*/
@@ -326,3 +345,200 @@
   border-radius: 8px !important;
   width: 90% !important;
 }
+
+
+
+
+
+
+/*----- service page -----*/
+
+#service-page{
+	width:100%;
+	height: 300px;
+	background: url("images/service_bg.svg");
+}
+
+#service-header-heading h1{
+	color: #FFFFFF;
+	font-size: 40px;
+    font-family: "Lato", sans-serif !important;
+    padding-top: 20px;
+}
+
+
+#service-header-heading h2{
+	color: #FFFFFF;
+	font-size: 18px;
+    font-family: "Noto Sans", sans-serif !important;
+	font-weight: 300;
+	width:80%;
+}
+
+#service-header-heading{
+	width: 50%;
+}
+
+
+#service-header-dec{
+	background: url("images/service_illus.svg");
+	width: 50%;
+	background-repeat: no-repeat;
+    background-position: center top;    
+	display: flex;
+}
+	
+.content-container .activity{
+	width:30%;
+	background:#FFFFFF;
+	margin:25px;
+	padding:20px;
+	height:670px;
+	border-radius: 15px;
+	border-right: #5A49E3 solid 10px;
+	box-shadow: 0px 4px 14px 8px #d8d8d8;
+    transition: all 1s;
+}
+
+
+/* Styling the hover activity */
+.content-container .activity:hover {
+  box-shadow: 0px 4px 20px 13px #bfbfbf;
+  transition: all 1s;
+}
+
+.content-container .activity .cover {
+	height: 200px;
+    background-size: 100% auto;
+}
+
+
+.content-container .activity span.status{
+	background-size: 20px;
+	background-repeat: no-repeat;
+}
+
+.content-container .activity span.method {
+    font-size: 18px;
+    color: #494949;
+}
+
+.content-container .activity h1.title {
+    margin-bottom: 10px;
+    font-family: 'lato';
+    color: #201547;
+    font-size: 23px;
+    margin-top: 10px;
+    font-weight: 600;
+}
+
+.content-container .activity h2.sub-title {
+    font-size: 16px;
+    font-weight: 600;
+    font-family: 'Lato';
+    color: #201547;
+}
+
+
+.content-container .activity span.article {
+    font-family: 'Lato';
+    font-size: 18px;
+    color: #494949;
+	line-height: 30px;
+}
+
+
+
+/*----- service page post -----*/
+/*post back to previous page btn*/
+.article-content-container .inpara-back-btn{
+	cursor: pointer;
+	background: url("images/arrow1.png") no-repeat;
+	background-size: 40px auto;
+	background-position: center left;
+}
+
+/*post heading 1 style*/
+.article-content-container .inpara-head1 {
+    font-family: 'Lato';
+    font-weight: 600;
+    font-size: 60px;
+	color: rgb(32, 21, 71);
+	
+}
+
+/*post heading 2 style*/
+.article-content-container .inpara-head2 {
+    font-family: 'Lato';
+    font-weight: 600;
+    font-size: 30px;
+	color: rgb(32, 21, 71);
+	margin-top: 50px;
+}
+
+/*post article style*/
+.article-content-container .inpara-article {
+    letter-spacing: -0.003em;
+    line-height: 32px;
+    font-size: 19px;
+    color: rgb(41, 41, 41);
+}
+
+/*img container*/
+.article-content-container .inpara-img {
+	height: 400px;
+	box-shadow: 0px 4px 14px 8px #d8d8d86e;
+	margin-top: 20px;
+    margin-bottom: 20px;
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+}
+
+/*blue warning container*/
+.article-content-container .blue-container{
+	background: rgb(137, 208, 205);
+	border-radius: 6px;
+	padding: 30px;
+	margin-top: 30px;
+}
+
+/*yellow warning container*/
+.article-content-container .yellow-container{
+	background: #ffd187;
+	border-radius: 6px;
+	padding: 30px;
+	margin-top: 30px;
+}
+
+/*warning container heading*/
+.article-content-container .inpara-container-head{
+	margin-top: 0px;
+    margin-bottom: 20px;
+}
+
+/*warning container blue icon*/
+.article-content-container .inpara-container-blue-icon{
+	background: url("images/icons8-info.svg") no-repeat;
+	background-size: 38px auto;
+}
+
+/*warning container yellow icon*/
+.article-content-container .inpara-container-yellow-icon{
+	background: url("images/icons8-for-you.svg") no-repeat;
+	background-size: 40px auto;
+}
+
+/*warning container yellow button*/
+.article-content-container .inpara-container-btn{
+	background-color: #423863;
+    color: white;
+    padding: 15px 10px;
+    cursor: pointer;
+    border-radius: 0px;
+    font-size: 17px;
+    font-weight: 300;
+	text-align:center;
+	margin-top:20px;
+}
+
+
