--- a/assets/layout.css
+++ b/assets/layout.css
@@ -30,10 +30,12 @@ body {
 
 	
 .banner {
-  	background-color: hotpink;
   	float: left;
   	width: 100%;
-  	height: 400px;
+  	height: 700px;
+	
+	display: flex;
+ 	justify-content: center;
 }
 
 .accouncements {
@@ -69,5 +71,7 @@ body {
 }
 
 
-/*global */
+.sticky-protect-bar{
+	margin-top: 70px;
+}
 
