--- a/assets/content.css
+++ b/assets/content.css
@@ -236,7 +236,7 @@ div#meal-right-col {
 .result-col-title {
   font-weight: 600;
   font-size: 20px;
-  line-height: 27px;
+  line-height: 2;
   color: #3D3D3D;
   padding-top: 23px;
 }
