--- a/assets/layout.css
+++ b/assets/layout.css
@@ -1,4 +1,100 @@
 /* CSS Document */
+/* The alert message box */
+.alert {
+	padding: 20px;
+	background-color: #ff9800; /* Red */
+	color: white;
+	margin-bottom: 15px;
+	text-align: center;
+}
+
+input:disabled {
+	color: #061b36;
+	opacity: 0.7;
+	border-color: #000000;
+	background-color: rgba(255, 255, 255, 0);
+}
+
+span.result-col-accuracy{
+	margin-top: 100px;
+	color: #FFFFFF;
+	border-radius: 5px;
+	font-size: 15px;
+}
+
+
+.result-col-accuracy-pass{
+	background-color: #AC77F0;
+}
+
+.result-col-accuracy-fail{
+	background-color: #f44336;
+}
+
+#meal-left-col select {
+	border-top: 0px !important;
+	border-buttom: 10px !important;
+	border-left: 0px !important;
+	border-right: 0px !important;
+	border-bottom-color: #000000;
+	border-bottom-style: solid;
+	width: 180px;
+	font-weight: 900;
+	font-size: 48px;
+	font-family: "Lato", sans-serif !important;
+	color: #061b36;
+	text-align: center;
+	border-width: 2px !important;
+}
+
+
+#help-overlay {
+	position: fixed; /* Sit on top of the page content */
+	display: none; /* Hidden by default */
+	width: 100%; /* Full width (cover the whole page) */
+	height: 100%; /* Full height (cover the whole page) */
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+	z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+	cursor: pointer; /* Add a pointer on hover */
+}
+
+.overlay-container{
+	width: 870px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 250px;
+	background-color: #FFFFFF;
+	display: flex;
+}
+
+.overlay-container .overlay-content{
+	padding: 70px;
+	width: 700px;
+}
+
+.overlay-container .overlay-close-btn{
+	background-image: url("images/close.svg");
+	background-size: 36px;
+	width: 97px;
+	background-repeat: no-repeat;
+	background-position: 10px 30px
+}
+
+.overlay-container span {
+	color: #8d8d8d;
+}
+
+
+#help-btn{
+	padding: 10px 20px;
+	margin-top: 20px;
+	width: 100px;
+}
+
 body {
 	margin: 0px !important;
 	font-family: "Noto Sans", sans-serif, Arial;
@@ -38,7 +134,7 @@ body {
  	justify-content: center;
 }
 
-.accouncements {
+.announcements {
   	background-color: #af272f;
   	float: left;
   	width: 100%;
